--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     
+    
     <style>
       .offcanvas-small {
          
@@ -54,12 +55,12 @@
           >
           <input
             type="text"
-            class="form-control p-2"
+            class="form-control p-3 border border-dark"
             id="text_symptoms"
             name="text_symptoms"
             placeholder="e.g., itching, sneezing, headache"
           />
-          <button type="button" class="btn btn-secondary mt-2" id="start-recognition">Use Voice Input</button>
+         
         </div>
 
         <!-- Display the transcribed text here -->
@@ -72,7 +73,7 @@
 
         <button
           type="submit"
-          class="btn btn-danger btn-lg"
+          class="btn btn-danger btn-lg p-2"
           style="width: 100%; padding: 5px; margin-bottom: 5px"
         >
           Predict
@@ -80,38 +81,7 @@
       </form>
     </div>
 
-    <script>
-      document.getElementById('start-recognition').addEventListener('click', function() {
-        if (!('webkitSpeechRecognition' in window)) {
-          alert('Your browser does not support speech recognition. Please try Chrome.');
-        } else {
-          var recognition = new webkitSpeechRecognition();
-          recognition.continuous = false;
-          recognition.interimResults = false;
-          recognition.lang = 'en-US';
-
-          recognition.onstart = function() {
-            console.log('Speech recognition started');
-          };
-
-          recognition.onresult = function(event) {
-            var transcript = event.results[0][0].transcript;
-            document.getElementById('text_symptoms').value = transcript;
-          };
-
-          recognition.onerror = function(event) {
-            console.error('Speech recognition error', event.error);
-          };
-
-          recognition.onend = function() {
-            console.log('Speech recognition ended');
-          };
-
-          recognition.start();
-        }
-      });
-    </script>
-
+   
     {% if predicted_disease %}
 
     <!-- Results -->
